# OpenFlow

./: .gitignore  CLAUDE.md  README.md  dev-server.sh  install.sh
.cargo/: config.toml
.github/workflows/: ci-linux.yml  release-linux.yml
app/: .eslintrc.json  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  OverlayApp.tsx  main.tsx  overlay.tsx  styles.css
app/src-tauri/: Cargo.toml  openflow.desktop  push-to-talk-stt.desktop  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src-tauri/src/asr/: ct2_whisper.rs  engine.rs  mod.rs  sherpa.rs
app/src-tauri/src/audio/: mod.rs  pipeline.rs  preprocess.rs
app/src-tauri/src/core/: app_state.rs  dev_simulator.rs  events.rs  hotkeys.rs  linux_setup.rs  mod.rs  pipeline.rs  settings.rs  updater.rs
app/src-tauri/src/llm/: autoclean.rs  mod.rs
app/src-tauri/src/models/: ct2.rs  download.rs  manager.rs  metadata.rs  mod.rs  service.rs
app/src-tauri/src/output/: injector.rs  mod.rs  tray.rs  uinput.rs  x11.rs
app/src-tauri/src/vad/: engine.rs  mod.rs  silero.rs
app/src/components/: Dashboard.tsx  DebugPanel.tsx  HUD.tsx  HotkeyInput.tsx  PlasmaOrb.tsx  SettingsPanel.tsx  StatusOrb.tsx  ToastStack.tsx
app/src/state/: appStore.ts
app/src/ui/: primitives.tsx  theme.ts
docs/: agents.md  architecture.md  sherpa-onnx.md
e2e-tests/: package.json
e2e-tests/tests/: smoke.spec.js
gnome-extension/openflow-hud@openflow/: extension.js  metadata.json
plans/: 2026-02-07--home-screen-hotkey-prompt.md  2026-02-07--linux-only-cleanup-installer-updater.md  2026-02-07--startup-asr-preload.md  2026-02-11--backend-readiness-hotkey-single-press.md  2026-02-11--wayland-auth-status-and-hud-toggle-relocation.md
scripts/: install-desktop-entry.sh  package-linux.sh  vk-dev-server.sh  vk-stop.sh
