[package]
name = "openflow"
version = "0.1.2"
description = "OpenFlow application backend"
authors = ["OpenFlow Team"]
license = "MIT"
edition = "2021"

[lib]
name = "openflow"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.43", features = ["sync", "rt-multi-thread", "time", "macros"] }
futures-util = "0.3"
tauri = { version = "2", features = ["tray-icon"] }
once_cell = "1.19"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5.0"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.8", features = ["v4"] }
crossbeam-channel = "0.5"
rodio = "0.17"
cpal = "0.15"
hound = "3.5"
regex = "1.10"
globset = "0.4"
sha2 = "0.10"
ort = { version = "2.0.0-rc.10", optional = true }
sherpa-rs = { version = "0.6.8", optional = true, features = ["download-binaries"] }
ct2rs = { version = "0.9.16", optional = true, features = ["whisper"] }
webrtc-audio-processing = { version = "0.5", optional = true, features = ["bundled"] }
sysinfo = "0.30"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tar = "0.4"
flate2 = { version = "1.0", features = ["rust_backend"] }
bzip2 = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12.2"
inotify = "0.10.2"
libc = "0.2"

[features]
default = ["audio", "hud", "models", "real-audio", "asr-ct2", "asr-sherpa", "webrtc-apm", "vad-silero"]
audio = []
hud = []
models = []
real-audio = []
vad-silero = ["ort"]
asr-sherpa = ["sherpa-rs"]
asr-ct2 = ["ct2rs"]
webrtc-apm = ["webrtc-audio-processing"]

[patch.crates-io]
webrtc-audio-processing-sys = { path = "../vendor/webrtc-audio-processing-sys" }
